--- a/index.html
+++ b/index.html
@@ -9,22 +9,34 @@
 <body>
     <div class="header">
         <div class="header-top">
-    <h1>Header Logo</h1>
-    <h2>header link one</h2>
-    <h2>header link two</h2>
-    <h2>header link three</h2>
-    <h1>This website is awesome</h1>
-    <p>This website had some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
-    <button>Sign up</button>
-    <h2>this is a placeholder for and image</h2>
+    <h1 id="header-logo">Header Logo</h1>
+    <ul style="list-style-type: none;"> 
+    <li class="header-link">header link one</li>
+    <li class="header-link">header link two</li>
+    <li class="header-link">header link three</li>
+</ul>
+    </div>
+    <div class="header-body">
+    </div>
+    <div class="header-body-left">
+    <h1 id="hero-main">This website is<br/> awesome</h1>
+    <p id="hero-secondary">This website had some subtext that goes here under the<br/> main title. 
+        It's smaller font and the color is lower<br/>
+         contrast</p>
+    <button type="button" class="sign-up">Sign up</button>
+</div>
+<div class="header-body-right">
+    <img class="thumbsup" src="./images/thumbsup.gif">
+</div>
 </div>
 </div>
 <div class="container-one">
-    <h1>Some random information</h1>
+    <h1 id="info-header">Some random information</h1>
     <p>this is some subtext under an illustration or image</p>
     <p>this is some subtext under an illustration or image</p>
     <p>this is some subtext under an illustration or image</p>
-    <p>this is some subtext under an illustration or image</p></div>
+    <p>this is some subtext under an illustration or image</p>
+</div>
 <div class="container-two">
     <h1>This is an inspiring quote, or a testimonial from a customer. 
         Maybe it's just filling up space, 
