Worked on second section.

--- a/index.html
+++ b/index.html
@@ -31,11 +31,25 @@
 </div>
 </div>
 <div class="container-one">
-    <h1 id="info-header">Some random information</h1>
-    <p>this is some subtext under an illustration or image</p>
-    <p>this is some subtext under an illustration or image</p>
-    <p>this is some subtext under an illustration or image</p>
-    <p>this is some subtext under an illustration or image</p>
+    <div class="h2">Some random information.</div>
+    <div class="boxes">
+        <div>
+            <div class="box"></div>
+            <span>This is some subtext under an illustration or image</span>
+        </div>
+        <div>
+            <div class="box"></div>
+            <span>This is some subtext under an illustration or image</span>
+        </div>
+        <div>
+            <div class="box"></div>
+            <span>This is some subtext under an illustration or image</span>
+        </div>
+        <div>
+            <div class="box"></div>
+            <span>This is some subtext under an illustration or image</span>
+        </div>
+    </div>
 </div>
 <div class="container-two">
     <h1>This is an inspiring quote, or a testimonial from a customer. 
