--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
     </div>
 </div>
 <div class="container-two">
-    <h1>This is an inspiring quote, or a testimonial from a customer. 
+    <p class="quote">This is an inspiring quote, or a testimonial from a customer. 
         Maybe it's just filling up space, 
         or maybe people will actually read it. 
-        Who knows? All I know is that it looks nice. 
-        -Thor, God of Thunder</h1></div>
+        Who knows? All I know is that it looks nice.</p>
+        <p class="author">-Thor, God of Thunder</p></div>
 <div class="container-three">
     <h1>Call to action! It's time!</h1>
     <p>Sign up for our product by clicking that button right over there!</p>
