--- a/index.html
+++ b/index.html
@@ -58,11 +58,18 @@
         Who knows? All I know is that it looks nice.</p>
         <p class="author">-Thor, God of Thunder</p></div>
 <div class="container-three">
-    <h1>Call to action! It's time!</h1>
-    <p>Sign up for our product by clicking that button right over there!</p>
-    <button2>Sign up</button2></div>
+    <div class="blue-container">
+        <div class="call-to-action">
+    <h4>Call to action! It's time!</h4>
+    <p class="last-p">Sign up for our product by clicking that button right over there!</p>
+</div>
+<div class="right">
+<button type="button" class="button-2">Sign up</button>
+</div>
+</div>
+</div>
 <div class="footer">
-    <h1>Copyright The Odin Project 2023</h1></div>
+    <h4>Copyright The Odin Project 2023</h4></div>
 
 </body>
 </html>
